--- a/index.html
+++ b/index.html
@@ -40,21 +40,21 @@
 <div class="container">
 
         <div class="row d-flex justify-content-center">
-          <div id="spaceZero" class="col-2 box">0</div>
-          <div id="spaceOne" class="col-2 box">1</div>
-          <div id="spaceTwo" class="col-2 box">2</div>
+          <div id="spaceZero" class="col-2 box"></div>
+          <div id="spaceOne" class="col-2 box"></div>
+          <div id="spaceTwo" class="col-2 box"></div>
         </div>
 
         <div class="row d-flex justify-content-center">
-          <div id="spaceThree" class="col-2 box">3</div>
-          <div id="spaceFour" class="col-2 box">4</div>
-          <div id="spaceFive" class="col-2 box">5</div>
+          <div id="spaceThree" class="col-2 box"></div>
+          <div id="spaceFour" class="col-2 box"></div>
+          <div id="spaceFive" class="col-2 box"></div>
         </div>
 
         <div class="row d-flex justify-content-center">
-          <div id="spaceSix" class="col-2 box">6</div>
-          <div id="spaceSeve" class="col-2 box">7</div>
-          <div id="spaceEight" class="col-2 box">8</div>
+          <div id="spaceSix" class="col-2 box"></div>
+          <div id="spaceSeve" class="col-2 box"></div>
+          <div id="spaceEight" class="col-2 box"></div>
         </div>
       </div>
 
