--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
     <input type="submit" value="Sign out">
   </form>
 
+<h2 class="message"></h2>
+
 <div class="container">
 
         <div class="row d-flex justify-content-center">
