--- a/index.html
+++ b/index.html
@@ -60,9 +60,10 @@
         </div>
       </div>
 
-      <form id="restart-game">
-          <input type="submit" value="Restart game">
-        </form>
+
+        <form id="start-game">
+            <input type="submit" value="New game">
+          </form>
 
     </body>
 </html>
