--- a/index.html
+++ b/index.html
@@ -39,27 +39,39 @@
 
 <h2 class="message"></h2>
 
-<div class="container">
+<!-- <div class="container"> -->
+        <!-- <div class="row d-flex justify-content-center"> -->
+          <!-- <div data-id="0" class="col-2 box"></div> -->
+          <!-- <div data-id="1" class="col-2 box"></div> -->
+          <!-- <div data-id="2" class="col-2 box"></div> -->
+        <!-- </div> -->
+<!--  -->
+        <!-- <div class="row d-flex justify-content-center"> -->
+          <!-- <div data-id="3" class="col-2 box"></div> -->
+          <!-- <div data-id="4" class="col-2 box"></div> -->
+          <!-- <div data-id="5" class="col-2 box"></div> -->
+        <!-- </div> -->
+<!--  -->
+        <!-- <div class="row d-flex justify-content-center"> -->
+          <!-- <div data-id="6" class="col-2 box"></div> -->
+          <!-- <div data-id="7" class="col-2 box"></div> -->
+          <!-- <div data-id="8" class="col-2 box"></div> -->
+        <!-- </div> -->
+      <!-- </div> -->
 
-        <div class="row d-flex justify-content-center">
-          <div data-id="0" class="col-2 box"></div>
-          <div data-id="1" class="col-2 box"></div>
-          <div data-id="2" class="col-2 box"></div>
-        </div>
-
-        <div class="row d-flex justify-content-center">
-          <div data-id="3" class="col-2 box"></div>
-          <div data-id="4" class="col-2 box"></div>
-          <div data-id="5" class="col-2 box"></div>
-        </div>
-
-        <div class="row d-flex justify-content-center">
-          <div data-id="6" class="col-2 box"></div>
-          <div data-id="7" class="col-2 box"></div>
-          <div data-id="8" class="col-2 box"></div>
+      <div class="container embed-responsive embed-responsive-1by1 gamearea">
+        <div class="embed-responsive-item gameboard">
+          <div data-id="0" class="col-4 box"></div>
+          <div data-id="1" class="col-4 box"></div>
+          <div data-id="2" class="col-4 box"></div>
+          <div data-id="3" class="col-4 box"></div>
+          <div data-id="4" class="col-4 box"></div>
+          <div data-id="5" class="col-4 box"></div>
+          <div data-id="6" class="col-4 box"></div>
+          <div data-id="7" class="col-4 box"></div>
+          <div data-id="8" class="col-4 box"></div>
         </div>
       </div>
-
 
         <form id="start-game">
             <input type="submit" value="New game">
