--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 
 
 <h2 class="message"></h2>
+<h2 class="history"></h2>
 
 <!-- <div class="container">
         <div class="row d-flex justify-content-center">
