--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
   <input required type="password" name="passwords[new]" placeholder="New password">
   <input type="submit" value="Change password">
 </form>
+<h2 class="change-password"></h2>
 
 <form class="hidden" id="sign-out">
     <input type="submit" value="Sign out">
