--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
       <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
     </head>
     <body>
+
+      <!-- Page main heading -->
       <h1 class="d-flex justify-content-center">Tic tac toe</h1>
 
+      <!-- Sign up form  -->
       <form id="sign-up">
     <input required type="email" name="credentials[email]" placeholder="Email">
     <input required type="password" name="credentials[password]" placeholder="Password">
@@ -22,50 +25,38 @@
     <input type="submit" value="Sign up">
   </form>
 
+  <!--  Sign in form -->
   <form id="sign-in">
       <input required type="email" name="credentials[email]" placeholder="Email">
       <input required type="password" name="credentials[password]" placeholder="Password">
       <input type="submit" value="Sign in">
     </form>
 
+    <!-- Change password form  -->
     <form class="hidden" id="change-password">
   <input required type="password" name="passwords[old]" placeholder="Old password">
   <input required type="password" name="passwords[new]" placeholder="New password">
   <input type="submit" value="Change password">
 </form>
+
+<!-- Tag for user changing password notifications -->
 <h2 class="change-password"></h2>
 
+<!-- Sign out 'button' -->
 <form class="hidden" id="sign-out">
     <input type="submit" value="Sign out">
   </form>
 
+  <!-- Get game history 'button' -->
   <form class="hidden" id="game-history">
       <input type="submit" value="See games history">
     </form>
 
+<!-- tags for user notifications -->
 <h2 class="history"></h2>
 <h2 class="message"></h2>
 
-<!-- <div class="container">
-        <div class="row d-flex justify-content-center">
-          <div data-id="0" class="col-2 box"></div>
-          <div data-id="1" class="col-2 box"></div>
-          <div data-id="2" class="col-2 box"></div>
-        </div>
-
-        <div class="row d-flex justify-content-center">
-          <div data-id="3" class="col-2 box"></div>
-          <div data-id="4" class="col-2 box"></div>
-          <div data-id="5" class="col-2 box"></div>
-        </div>
-
-        <div class="row d-flex justify-content-center">
-          <div data-id="6" class="col-2 box"></div>
-          <div data-id="7" class="col-2 box"></div>
-          <div data-id="8" class="col-2 box"></div>
-        </div>
-      </div> -->
-
+<!-- Game board -->
       <div class="hidden container embed-responsive embed-responsive-1by1 gamearea">
         <div class="embed-responsive-item gameboard">
           <div data-id="0" class="col-4 box"></div>
@@ -80,6 +71,7 @@
         </div>
       </div>
 
+      <!-- Start a new game 'button' -->
         <form class="hidden" id="start-game">
             <input type="submit" value="New game">
           </form>
